apps/sonarqube/base/sonar-svc-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonar-mysql
  labels:
    name: sonar-mysql
spec:
  ports:
    - name: mysql
      # port: is the abstracted Service port,
      # which can be any port other pods use to access the Service
      port: 3306
  selector:
    app: sonar-mysql-deployment
